--- a/trunk/Makefile.in
+++ b/trunk/Makefile.in
@@ -1,3 +1,4 @@
+VERSION=0.9
 FILES=corset.cc Cluster.cc MakeClusters.cc MakeClusters.h Transcript.h Read.h StringSet.h Cluster.h
 OBJ=corset.o Cluster.o MakeClusters.o Transcript.cc
 
@@ -5,10 +6,18 @@ corset: $(OBJ) Makefile
 	@CXX@ @CXXFLAGS@ $(OBJ) -o $@ @LDFLAGS@ @LIBS@
 
 %.o: %.cc
-	@CXX@ @CXXFLAGS@ -c $< -o $@
+	@CXX@ @CXXFLAGS@ -c $< -o $@ -DVERSION=$(VERSION)
 
 clean:                                                     
 	-rm *~ *.o
 
 install: corset
 	cp corset @prefix@/bin
+
+tar_ball:
+	-mkdir corset-$(VERSION)
+	cp $(FILES) corset-$(VERSION)
+	cp Makefile.in README configure COPYING LICENSE corset-$(VERSION)
+	tar -cvf corset-$(VERSION).tar corset-$(VERSION)/
+	gzip corset-$(VERSION).tar
+	-rm -rf corset-0.9
