--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -1,7 +1,7 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_INIT([corset], [0.9], [<nadia.davidson@mcri.edu.au>])
+AC_INIT([corset], [0.91], [<nadia.davidson@mcri.edu.au>])
 
 # Checks for programs.
 #AC_PROG_CC
@@ -32,15 +32,7 @@ AC_CHECK_HEADER([sam.h], [], [
   echo "" &&
   echo "ERROR: Could not find the samtools headers." &&
   echo "       Please specify the location with: " &&
-  echo "       './configure --with-bam_inc=<path_to_sam.h> " &&
-  exit -1
-])
-
-AC_CHECK_LIB([bam], [main], [], [
-  echo "" &&
-  echo "ERROR: Could not find the samtools library, libbam." &&
-  echo "       Please specify the location with: " &&
-  echo "       './configure --with-bam_lib=<path_to_bam_library> " &&
+  echo "       './configure --with-bam_inc=<directory_containing_sam.h> " &&
   exit -1
 ])
 
@@ -48,7 +40,15 @@ AC_CHECK_LIB([z], [main], [], [
   echo "" &&
   echo "ERROR: Could not find the samtools library, libbam." &&
   echo "       Please specify the location with: " &&
-  echo "       './configure --with-bam_lib=<path_to_bam_library> " &&
+  echo "       './configure --with-bam_lib=<directory_containing_bam_library> " &&
+  exit -1
+])
+
+AC_CHECK_LIB([bam], [main], [], [
+  echo "" &&
+  echo "ERROR: Could not find the samtools library, libbam." &&
+  echo "       Please specify the location with: " &&
+  echo "       './configure --with-bam_lib=<directory_containing_bam_library> " &&
   exit -1
 ])
 
