--- a/trunk/Makefile.in
+++ b/trunk/Makefile.in
@@ -1,6 +1,6 @@
 VERSION=0.94
-FILES=corset.cc Cluster.cc Transcript.cc MakeClusters.cc MakeClusters.h Transcript.h Read.h StringSet.h Cluster.h 
-OBJ=corset.o Cluster.o MakeClusters.o Transcript.o
+FILES=corset.cc Cluster.cc Transcript.cc MakeClusters.cc Read.cc MakeClusters.h Transcript.h Read.h StringSet.h Cluster.h 
+OBJ=corset.o Cluster.o MakeClusters.o Transcript.o Read.o
 
 corset: $(OBJ) Makefile
 	@CXX@ @CXXFLAGS@ $(OBJ) -o $@ @LDFLAGS@ @LIBS@
