--- a/trunk/Makefile.in
+++ b/trunk/Makefile.in
@@ -1,18 +1,27 @@
 VERSION=1.02
-FILES=corset.cc Cluster.cc Transcript.cc MakeClusters.cc Read.cc MakeClusters.h Transcript.h Read.h StringSet.h Cluster.h 
+FILES=corset.cc Cluster.cc Transcript.cc MakeClusters.cc Read.cc MakeClusters.h Transcript.h Read.h StringSet.h Cluster.h corset_fasta_ID_changer.cc
 OBJ=corset.o Cluster.o MakeClusters.o Transcript.o Read.o
 
-corset: $(OBJ) Makefile
+all: corset corset_fasta_ID_changer Makefile
+
+corset: $(OBJ)
 	@CXX@ @CXXFLAGS@ $(OBJ) -o $@ @LDFLAGS@ @LIBS@
 
 %.o: %.cc
 	@CXX@ @CXXFLAGS@ -c $< -o $@ -DVERSION=$(VERSION)
 
-clean:                                                     
-	-rm *~ *.o
+corset_fasta_ID_changer: corset_fasta_ID_changer.cc
+	g++ $< -o $@
 
-install: corset
+clean:                                                     
+	-rm *~ $(OBJ)
+
+Clean: clean
+	-rm corset corset_fasta_ID_changer
+
+install: all
 	cp corset @prefix@/bin
+	cp corset_fasta_ID_changer @prefix@/bin
 
 tar_ball:
 	-mkdir corset-$(VERSION)
